// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProofRequesting Component generate new qr works correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
          testID="com.ariesbifold:id/LoadingActivityIndicator"
        >
          <Image
            source={
              Object {
                "default": "",
              }
            }
            style={
              Object {
                "height": 120,
                "objectFit": "contain",
                "width": 120,
              }
            }
            testID="com.ariesbifold:id/LoadingActivityIndicatorImage"
          />
          <View
            collapsable={false}
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={200}
              width={200}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 20,
            "paddingVertical": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#000000",
                "marginTop": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          Student full name
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginBottom": 10,
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Verifier.RefreshQR"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(53, 130, 63, 0.35)",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/GenerateNewQR"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ],
            ]
          }
        >
          Verifier.RefreshQR
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ProofRequesting Component renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
          testID="com.ariesbifold:id/LoadingActivityIndicator"
        >
          <Image
            source={
              Object {
                "default": "",
              }
            }
            style={
              Object {
                "height": 120,
                "objectFit": "contain",
                "width": 120,
              }
            }
            testID="com.ariesbifold:id/LoadingActivityIndicatorImage"
          />
          <View
            collapsable={false}
            style={
              Object {
                "position": "absolute",
                "transform": Array [
                  Object {
                    "rotate": "0deg",
                  },
                ],
              }
            }
          >
            <
              fill="#FFFFFF"
              height={200}
              width={200}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 20,
            "paddingVertical": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#000000",
                "marginTop": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          Student full name
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginBottom": 10,
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Verifier.RefreshQR"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(53, 130, 63, 0.35)",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/GenerateNewQR"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ],
            ]
          }
        >
          Verifier.RefreshQR
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ProofRequesting Component renders correctly 2`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 730,
            "justifyContent": "center",
            "marginHorizontal": 10,
            "marginTop": 15,
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "marginHorizontal": 20,
            "paddingVertical": 16,
            "textAlign": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Object {
                "color": "#000000",
                "marginTop": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          Verifier.ScanQR
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              Object {
                "marginTop": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          Student full name
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "marginBottom": 10,
        "marginHorizontal": 20,
        "marginTop": "auto",
      }
    }
  >
    <View
      accessibilityLabel="Verifier.RefreshQR"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#42803E",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/GenerateNewQR"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
                false,
              ],
            ]
          }
        >
          Verifier.RefreshQR
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
